[Flatpak SDK][WPE] Launching the remote inspector kills MB https://bugs.webkit.org/show_bug.cgi?id=213899

Patch by Philippe Normand <pnormand@igalia.com> on 2020-09-16
Reviewed by Adrian Perez de Castro.

Load inspector resources from developer build artefacts, when the inspector server is
running in this configuration. Fall back to system libraries loading mechanism otherwise.

* inspector/remote/glib/RemoteInspectorUtils.cpp:
(Inspector::backendCommands):

Canonical link: https://commits.webkit.org/229435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267159 268f45cc-cd09-0410-ab3c-d52691b4dbfc